--- a/src/app/pages/availabletechnician/availabletechnician.component.html
+++ b/src/app/pages/availabletechnician/availabletechnician.component.html
@@ -5,7 +5,8 @@
       <div class="container-fluid sticky fixed-top " >
   
             <!--Start of logo -->
-            <h1 class="navbar-brand" routerLink=""><img src="/assets/images/tutLogo.png"> </h1> <P class = "center">ADMIN VIEW TECHNICIANS</P>
+            <h1 class="navbar-brand" routerLink=""><img class ="logo" src="/assets/images/tutLogo.png"> </h1> 
+            <img class="toggleMenu" src="/assets/images/icons8-menu.svg" width="60">
     
             <!--End of logo-->
       </div>
@@ -21,8 +22,8 @@
         <nav class="breadcrumbNav">
             <ul >
                 
-                <li class = "breadcrumb-item active" id = "breadcrumbpadding"><a href="#" id="hover">View Request</a></li>
-                <li class = "" id = "breadcrumbpadding"><a href="#" id="hover">View Progress</a></li>
+                <li class = "breadcrumb-item active" id = "breadcrumbpadding"><a class ="anchorBorder" href="#" id="hover">View Request</a></li>
+                <li class = "" id = "breadcrumbpadding"><a class ="anchorBorder" href="#" id="hover">View Progress</a></li>
 
 
                 
@@ -43,8 +44,8 @@
                             <div class="card ">
                                 <div class="card-body">
                                     <div class="card-titles">
-                                        <h6 class="card-title"></h6>
-                                        <h6 class="card-title" id = "date"></h6>
+                                        <h6 class="card-title">Ref:f14m56tg</h6>
+                                        <h6 class="card-title" id = "date">RequestDate</h6>
                                     </div>
                                   
                                     <div class="imgStaffInfo">
