--- a/src/app/staffpage/staffpage.component.html
+++ b/src/app/staffpage/staffpage.component.html
@@ -66,9 +66,7 @@
                     <div class="reqhead1">SEND REQUEST</div>
                     <div *ngIf="showSuccessMsg" class="alert alert-success" role="alert">
                         <strong>{{successmsg}}</strong>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
+                        <button id="b12" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                       </div>
 
                     <label class="d-block mb-4">
@@ -109,6 +107,12 @@
 
                         <input class="form-control" [(ngModel)]="requestform.Image" name="requestform.Image" type="file"
                             id="formFileDisabled" />
+                    </label>
+
+                    <label class="d-block mb-4">
+                        <span class="form-label d-block"><h4>Staff Number</h4></span>
+                        <input type="text" class="form-control" placeholder="235578933"
+                            [(ngModel)]="requestform.staff_id" name="requestform.staff_id" name="requestform.venue" readonly/>
                     </label>
 
                     <div class="mb-3">
