--- a/src/app/pages/adminviewrequest/adminviewrequest.component.html
+++ b/src/app/pages/adminviewrequest/adminviewrequest.component.html
@@ -5,7 +5,8 @@
       <div class="container-fluid sticky fixed-top " >
   
             <!--Start of logo -->
-            <h1 class="navbar-brand" routerLink=""><img src="/assets/images/tutLogo.png"> </h1>
+            <h1 class="navbar-brand" routerLink=""><img class ="logo" src="/assets/images/tutLogo.png"> </h1>
+            <img class="toggleMenu" src="/assets/images/icons8-menu.svg" width="80">
     
             <!--End of logo-->
       </div>
@@ -22,7 +23,7 @@
             <ul >
                 
                 <li class = "breadcrumb-item active" id = "breadcrumbpadding"><a id="hover" href="#">View Request</a></li>
-                <li class = "" id = "breadcrumbpadding"><a id="hover" href="#">View Progress</a></li>
+               
 
 
                 
@@ -35,7 +36,7 @@
             <form class="backFrom">
                 <div class = "contentForm">
 
-                    <h3 class = "toptitle">Admin View requests</h3>
+                    <h3 class = "toptitle">Admin View Requests</h3>
 
                     
 
@@ -70,7 +71,7 @@
                                     <div class="imgStaffInfo">
                                         <img src="/assets/images/icon _profile.png" >
                                         <p class="card-text">thabelo livhimbi<br>LivhimbiT@gmail.com</p>
-                                        <button class = "btn1">View</button>
+                                        <button class = "btn1" routerLink="/adminsinglerequest">View</button>
                                     </div>
                                     
                                 </div>
