--- a/src/app/pages/adminviewsinglerequest/adminviewsinglerequest.component.css
+++ b/src/app/pages/adminviewsinglerequest/adminviewsinglerequest.component.css
@@ -3,7 +3,10 @@
     height:115px;
     
 }
-
+.toggleMenu {
+    cursor: pointer;
+    display:none;
+}
 .center 
 {
     margin-right: 35%;
@@ -22,7 +25,11 @@ a {
 
     padding-left:75%;
 }
+.logo {
+    height: 100px;
 
+    margin-top: 10px;
+}
 
 img {
     height: 100px;
@@ -64,6 +71,7 @@ body {
     padding: 10px 0;
 }
 
+
  a {
     font-style: normal;
     font-weight: 400;
@@ -98,7 +106,7 @@ body {
 }
 .contentContainerRight {
     
-    width:1562px;
+    width:1200px;
     height: 1055px;
     margin-left: 17.9%;
     border: 1px solid green;
@@ -134,47 +142,277 @@ form {
     background: #ECE7E7;
     width: 1110px;
     height: 40px;
-    margin:2% 6%;
+    margin:2.5% 6%;
     padding-left: 50px;
 }
 
-.myTable {
+.Cards {
 
+
+    overflow-y:scroll;
+    height:600px;
+    width: 1180px;
+   
+}
+
+.card {
+    margin:1% 25% ;
     
-    padding: 5% 20%;
+    width: 60%;
+    height: 180px;
+    border: 4px solid #969090; ;
+}
+
+.card-body {
+
+        margin: -10px -5px;
+        
+   
+}
+
+.card-titles {
+    display: flex;
+    
+  
+}
+#date {
+
+    padding-left: 50.5%;
+}
+.imgStaffInfo {
+
+    border: 1px solid red;
+    display:flex;
+    flex-direction: row;
+    padding: 0 25%;
+    height: 130px;
     
 }
-table {
-    margin-top: 1%;
-    border: 1px solid black;
-    width: 750px;
-    height: 300px;
-}
+.card-text {
+    border: 1px solid red;
+    padding: 12% 2%;
+    margin-left: 1%;
 
-.rowPadding {
-    padding: 13% 10px;
 }
+.btn1 {
+    margin: 0% 50%;
+    position: absolute;
+    bottom: 10%;
 
-.requestimgSize {
+    width: 140px;
+    height: 40px;
 
-    width: 50px;
-    height:50px ;
-}
-.rowPaddingImage {
-    padding: 8% 10px;
-}
-.rowPaddingDropDown {
-    padding: 13% 50px;
+    text-align: center;
+    border: none;
+    background: #D9D9D9;
+    border-radius: 10px;
 }
 
 button {
-    background-color:#005596;
-    color: white;
-    border: 1px solid #FFFFFF;
-    border-radius: 10px;
+    width: 20%;
+    padding: 0 15px;
+}
 
-    width: 150px;
-    height: 50px;
 
-    margin: 0 45%;
+@media only screen and (max-width: 1200px) {
+    .sticky {
+        width: 100%;
+    }
+    body {
+        background-color: yellow;
+    }
+    .sideNav {
+        width: 300px;
+
+    }
+    .contentContainerRight {
+        width: 900px;
+        margin-top: 0%;
+        
+    
+    
+    }
+    form { 
+
+        width: 900px;
+    }
+    .backFrom{
+        width: 870px;
+        
+    
+    }
+    .toptitle {
+        width: 750px;
+        margin:5% 5%;
+        
+    }
+
+    /*
+        #date {
+
+        padding-left: 60.5%;
+    }
+    
+    */
+    
+    .Cards {
+        border:1px solid red;
+        width: 850px;
+        
+    }
+    .card {
+        margin:1% 10% ;
+        width: 700px;
+
+    }
+
+}
+
+
+@media only screen and (max-width: 992px) {
+    body {
+        background-color:lightgray;
+        width: 100%;
+    }
+    .logo {
+        height: 90px;
+       margin-top: -2%;
+    }
+    .sticky {
+        width: 100%;
+    }
+    .breadcrumbNav {
+
+    
+        margin: 12% -5%;
+        padding: 20px 30px;
+        
+       
+       
+        
+        
+    }
+    .sideNav {
+        width: 200px;
+
+    }
+    .contentContainerRight {
+        width: 800px;
+        margin-top: 0%;
+        margin-left: 10.9%;
+    
+    
+    }
+    form { 
+
+        width: 600px;
+    }
+    .backFrom{
+        width: 750px;
+        
+    
+    }
+    .toptitle {
+        width: 660px;
+        margin:5% 8%;
+        font-size: 20px;
+        
+        padding-left: 40px;
+        
+    }
+    .Cards {
+        border:1px solid red;
+        background-color: #cf5252;
+        width: 800px;
+        
+        
+    }
+    .card {
+        margin:0% 5% ;
+        width: 700px;
+
+    }
+
+}
+
+
+@media only screen and (max-width: 768px) {
+
+    body{
+        background-color: rgb(235, 143, 89);
+        width: 100%;
+    }
+    .sticky{
+        border: 1px solid red;
+    }
+    .logo {
+       height: 80px;
+    }
+    .sideNav {
+        display: none;
+
+    }
+    .toggleMenu {
+
+        display:block;
+        width: 10%;
+        
+        
+        
+        
+    }
+    .contentContainerRight {
+        width: 500px;
+        margin-top: 0%;
+        margin-left: -15%;
+    
+    
+    }
+
+}
+
+
+@media only screen and (max-width: 576px) {
+
+    body{
+        background-color: rgb(131, 247, 116);
+        width: 100%;
+    }
+    .sideNav {
+        display: none;
+
+    }
+    .contentContainerRight {
+        width: 600px;
+        margin-top: 0%;
+        margin-left: -20%;
+    
+    
+    }
+    .backFrom{
+        width: 570px;
+        
+    
+    }
+    
+    .toptitle {
+        width: 500px;
+        margin:5% 10%;
+        font-size: 18px;
+        
+        padding-left: 40px;
+        
+    }
+    .Cards {
+        border:1px solid red;
+        background-color: #cf5252;
+        width: 250px;
+        
+        
+    }
+    .card {
+        margin:0% 5% ;
+        width: 550px;
+
+    }
 }
